	- Fix Linux/Unix potential program hang when dialog pops up while a menu
	  is open (STR #3179).
	- Fixes a crash when a Unix/Linux program calls take_focus() before any
	  window has been show()n.
	- Fixed an error on the Mac platform when drawing to an Fl_Image_Surface
	  object without using the Fl_Image_Surface::draw() method.


CHANGES IN FLTK 1.3.3					RELEASED: Nov 03 2014

	New features and extensions

	- New class Fl_Copy_Surface allows copying graphical data to the
	  clipboard in a cross-platform way (STR #3058).
	- Support for pasting graphical data from the clipboard to a widget.
	- New class Fl_Image_Surface allows drawing into an Fl_Image object.
	- Methods Fl::add_clipboard_notify() and Fl::remove_clipboard_notify()
	  to get notifications whenever the clipboard changes (STR #2636).
	- New method Fl_Window::wait_for_expose() (STR #3124, STR #3129).
	- New bilinear scaling method for RGB images (STR #2869, STR #3062).
	- New method Fl_Widget::top_window() (STR #2948).
	- New method Fl_Widget::top_window_offset() (part of STR #2944).
	- New Fl_Tree_Item methods label_x(), label_y(), label_w(), label_h().
	- New methods Fl::enable_im() and Fl::disable_im() to enable/disable
	  system Input Methods (IM).
	- New methods Fl::add_system_handler() and Fl::remove_system_handler()
	  to intercept low level system events.
	- New FLTK scheme "gleam" (STR #2672).
	- New method Fl::is_scheme() to compare the current scheme name.
	- New method to set custom icons for windows (STR #2816),
	  see Fl_Window::icon() for more info.
	- New method to set any custom cursor, based on a Fl_RGB_Image object.
	  Also changed fallback cursors to use this method, so that fallback
	  cursors are handled in a platform independent manner (STR #2660).
	- New ability to convert Fl_Pixmap to Fl_RGB_Image (STR #2659).
	- Support for full screen windows over multiple monitors.
	- New optional line numbers in Fl_Text_Display and options to control